adding comments to download

--- a/code/parse NAD data.ipynb
+++ b/code/parse NAD data.ipynb
@@ -10,10 +10,7 @@
     "import pandas as pd\n",
     "import io\n",
     "from tqdm import tqdm\n",
-    "from itertools import islice\n",
-    "from time import sleep\n",
-    "# Can probably get the census tract based on an api: https://geo.fcc.gov/api/census/#!/area/get_area\n",
-    "# but this is different based on the census year"
+    "from time import sleep\n"
    ]
   },
   {
@@ -23,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '../data/NAD_r11.txt'"
+    "filepath = '../data/NAD_r11.txt' # too large to push onto Git, but is part of the download from here: https://nationaladdressdata.s3.amazonaws.com/NAD_r12_TXT.zip"
    ]
   },
   {
