checking spatial join files

--- a/code/2023-06-16 download county fips.ipynb
+++ b/code/2023-06-16 download county fips.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dc05fea9",
+   "id": "91ab646d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b3ef812",
+   "id": "82a01e4e",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "600b9060",
+   "id": "78600956",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4413f0f0",
+   "id": "1395f1c0",
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2080,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "00d7f1be",
+   "id": "486dbfd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,8 +2089,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "5e09fa3d",
+   "execution_count": 33,
+   "id": "921d01e7",
    "metadata": {},
    "outputs": [
     {
@@ -2150,6 +2150,11 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3190</th>\n",
+       "      <td>56037</td>\n",
+       "      <td>Sweetwater County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3191</th>\n",
        "      <td>56039</td>\n",
        "      <td>Teton County</td>\n",
@@ -2169,34 +2174,29 @@
        "      <td>56045</td>\n",
        "      <td>Weston County</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3195</th>\n",
-       "      <td>'</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3196 rows × 2 columns</p>\n",
+       "<p>3194 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       fips            names\n",
-       "0     01000          Alabama\n",
-       "1     01001   Autauga County\n",
-       "2     01003   Baldwin County\n",
-       "3     01005   Barbour County\n",
-       "4     01007      Bibb County\n",
-       "...     ...              ...\n",
-       "3191  56039     Teton County\n",
-       "3192  56041     Uinta County\n",
-       "3193  56043  Washakie County\n",
-       "3194  56045    Weston County\n",
-       "3195      '                 \n",
+       "       fips              names\n",
+       "0     01000            Alabama\n",
+       "1     01001     Autauga County\n",
+       "2     01003     Baldwin County\n",
+       "3     01005     Barbour County\n",
+       "4     01007        Bibb County\n",
+       "...     ...                ...\n",
+       "3190  56037  Sweetwater County\n",
+       "3191  56039       Teton County\n",
+       "3192  56041       Uinta County\n",
+       "3193  56043    Washakie County\n",
+       "3194  56045      Weston County\n",
        "\n",
-       "[3196 rows x 2 columns]"
+       "[3194 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,7 +2212,18 @@
     "df['fips'] = fips\n",
     "df['names'] = names\n",
     "\n",
-    "df[df['names'].apply(lambda x: len(x.split()) > 1)]"
+    "df = df[df['names'].apply(lambda x: len(x)> 2)]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "925308fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/fips_county.csv', index=False)"
    ]
   }
  ],
