--- a/code/append fips to virginia.ipynb
+++ b/code/append fips to virginia.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42e1dcba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ec001b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8539dc3",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43a57138",
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4b1963ff",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d092784e",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "62f47dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dcc28beb",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +472,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "17903e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +488,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d5f1d7ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +497,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1a36499c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +506,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ea4bee68",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +566,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ce0c1174",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +582,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17e48a0",
    "metadata": {},
    "source": [
     "# Remove non virginia fips from selection"
@@ -602,7 +590,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "46d6ec54",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +997,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a8f39684",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1018,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c04d339",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1148,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8ba50844",
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1277,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12cbd6bb",
    "metadata": {},
    "source": [
     "# Import state shape files"
@@ -1302,7 +1285,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8e966501",
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1635,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cee89c53",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +1995,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10119efc",
    "metadata": {},
    "source": [
     "# Print example address file"
@@ -2023,7 +2003,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8a7ef2f6",
    "metadata": {},
    "outputs": [
     {
@@ -2215,7 +2194,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9bde8ab2",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2214,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "23ba57f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2246,7 +2223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d3e845",
    "metadata": {},
    "source": [
     "# You can map fips using the geometry "
@@ -2255,7 +2231,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "94cfb658",
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2316,7 +2291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
