--- a/code/check county coverage.ipynb
+++ b/code/check county coverage.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b845237e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6f4f88db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08e730de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a2162ed",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
