--- a/code/2023-06-19 spatial join address to shape files check.ipynb
+++ b/code/2023-06-19 spatial join address to shape files check.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
+   "id": "784338f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
+   "id": "e28c9f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1318922c",
    "metadata": {},
    "source": [
     "# Retrieve all zip file references"
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
+   "id": "51a05f5a",
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
+   "id": "c739d655",
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
+   "id": "b3bfe288",
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
+   "id": "57a7e883",
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
+   "id": "20d795d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
+   "id": "d4b3db33",
    "metadata": {},
    "outputs": [
     {
@@ -879,6 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
+   "id": "a10bcfec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,6 +906,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39892e61",
    "metadata": {},
    "source": [
     "# Test the function results here"
@@ -904,6 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
+   "id": "f1b151d9",
    "metadata": {},
    "outputs": [
     {
@@ -927,6 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
+   "id": "23a5d2ce",
    "metadata": {},
    "outputs": [
     {
@@ -1251,6 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
+   "id": "9bf71c10",
    "metadata": {},
    "outputs": [
     {
@@ -1466,6 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
+   "id": "7916fbb8",
    "metadata": {},
    "outputs": [
     {
@@ -1486,6 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 303,
+   "id": "bc64c37b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,6 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
+   "id": "60feddff",
    "metadata": {},
    "outputs": [
     {
@@ -1680,6 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
+   "id": "589d37a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,6 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf150df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,6 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "6ea78c8b",
    "metadata": {},
    "outputs": [
     {
@@ -1725,6 +1745,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2195d151",
    "metadata": {},
    "source": [
     "# Itereate through all files in data/state_county, and export it to data/county_address/ under <county_fip>.csv.xz"
@@ -1733,6 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
+   "id": "0948a833",
    "metadata": {},
    "outputs": [
     {
@@ -1783,9 +1805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NAD venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".nad_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1797,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
