updating coverage report

--- a/code/2023-06-21 Generate Coverage Report.ipynb
+++ b/code/2023-06-21 Generate Coverage Report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,14 +767,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3221/3221 [02:58<00:00, 18.02it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3221/3221 [04:26<00:00, 12.08it/s]\n"
      ]
     },
     {
@@ -805,28 +805,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>290854701001000</td>\n",
+       "      <td>481810001011000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>290854701001001</td>\n",
-       "      <td>0</td>\n",
+       "      <td>481810001011001</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>290854701001002</td>\n",
-       "      <td>0</td>\n",
+       "      <td>481810001011002</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>290854701001003</td>\n",
-       "      <td>0</td>\n",
+       "      <td>481810001011003</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>290854701001004</td>\n",
-       "      <td>0</td>\n",
+       "      <td>481810001011004</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -834,53 +834,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>543</th>\n",
-       "      <td>132839602005104</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>544</th>\n",
-       "      <td>132839602005105</td>\n",
+       "      <th>1428</th>\n",
+       "      <td>270634804004033</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>545</th>\n",
-       "      <td>132839602005106</td>\n",
+       "      <th>1429</th>\n",
+       "      <td>270634804004034</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>546</th>\n",
-       "      <td>132839602005107</td>\n",
+       "      <th>1430</th>\n",
+       "      <td>270634804004035</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>547</th>\n",
-       "      <td>132839602005108</td>\n",
+       "      <th>1431</th>\n",
+       "      <td>270634804004036</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1432</th>\n",
+       "      <td>270634804004037</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8174038 rows × 2 columns</p>\n",
+       "<p>8174955 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             GEOID20  address_count\n",
-       "0    290854701001000              0\n",
-       "1    290854701001001              0\n",
-       "2    290854701001002              0\n",
-       "3    290854701001003              0\n",
-       "4    290854701001004              0\n",
-       "..               ...            ...\n",
-       "543  132839602005104              1\n",
-       "544  132839602005105              0\n",
-       "545  132839602005106              0\n",
-       "546  132839602005107              0\n",
-       "547  132839602005108              0\n",
+       "              GEOID20  address_count\n",
+       "0     481810001011000              0\n",
+       "1     481810001011001              6\n",
+       "2     481810001011002             59\n",
+       "3     481810001011003             24\n",
+       "4     481810001011004              3\n",
+       "...               ...            ...\n",
+       "1428  270634804004033              0\n",
+       "1429  270634804004034              0\n",
+       "1430  270634804004035              0\n",
+       "1431  270634804004036              0\n",
+       "1432  270634804004037              0\n",
        "\n",
-       "[8174038 rows x 2 columns]"
+       "[8174955 rows x 2 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8174038 rows × 2 columns</p>\n",
+       "<p>8174955 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1008,10 +1008,10 @@
        "595  721537506022014              0\n",
        "596  721537506022015              0\n",
        "\n",
-       "[8174038 rows x 2 columns]"
+       "[8174955 rows x 2 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,19 +1094,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv('../data/coverage_report.csv', index=False)"
+    "final_df.to_csv('../data/coverage_report.csv.xz', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NAD venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".nad_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1118,7 +1118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
