--- a/code/2023-06-22 visualize US.ipynb
+++ b/code/2023-06-22 visualize US.ipynb
@@ -1649,9 +1649,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:.conda-.nad_venv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-.nad_venv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1663,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
